--- a/infra/samconfig.toml
+++ b/infra/samconfig.toml
@@ -1,8 +1,8 @@
 version = 0.1
 [default.deploy.parameters]
-stack_name = "StackNameGoesHere"
+stack_name = "ocean-metadata"
 resolve_s3 = true
-s3_prefix = "StackNameGoesHere"
+s3_prefix = "ocean/metadata"
 region = "us-east-2"
 confirm_changeset = true
 capabilities = "CAPABILITY_IAM"
