feat: add core functionality
TESTS ARE WRONG.

--- a/infra/template.yml
+++ b/infra/template.yml
@@ -28,6 +28,7 @@ Resources:
     Properties:
       QueueName: ocean-catalog.fifo
       ContentBasedDeduplication: true
+      DeduplicationScope: messageGroup
       FifoQueue: true
 
 Outputs:
