--- a/pom.xml
+++ b/pom.xml
@@ -10,35 +10,23 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.mytiki</groupId>
     <artifactId>ocean-metadata</artifactId>
     <version>0.0.1</version>
     <packaging>jar</packaging>
 
     <name>TIKI Ocean Metadata</name>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-    </properties>
+    <parent>
+        <groupId>com.mytiki</groupId>
+        <artifactId>ocean-parent</artifactId>
+        <version>0.0.3</version>
+    </parent>
 
     <dependencies>
         <dependency>
-            <groupId>com.amazonaws</groupId>
-            <artifactId>aws-lambda-java-core</artifactId>
-            <version>1.2.2</version>
-        </dependency>
-        <dependency>
-            <groupId>com.amazonaws</groupId>
-            <artifactId>aws-lambda-java-events</artifactId>
-            <version>3.11.0</version>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.13.2</version>
-            <scope>test</scope>
+            <groupId>com.mytiki</groupId>
+            <artifactId>ocean-common</artifactId>
+            <version>0.0.2</version>
         </dependency>
     </dependencies>
 
