--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,12 @@
 
     <name>TIKI Ocean Metadata</name>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.mytiki</groupId>
