--- a/infra/samconfig.toml
+++ b/infra/samconfig.toml
@@ -1,9 +1,19 @@
 version = 0.1
-[default.deploy.parameters]
+
+[default.global.parameters]
 stack_name = "ocean-metadata"
-resolve_s3 = true
+s3_bucket = "mytiki-sam-deploy"
 s3_prefix = "ocean/metadata"
 region = "us-east-2"
+
+[default.deploy.parameters]
 confirm_changeset = true
-capabilities = "CAPABILITY_IAM"
+capabilities = [
+    "CAPABILITY_IAM",
+    "CAPABILITY_NAMED_IAM",
+    "CAPABILITY_AUTO_EXPAND"
+]
 image_repositories = []
+parameter_overrides = [
+    "SAMBucket=mytiki-sam-deploy"
+]
