fix: split infra into github & aws
we need to use CF to first create the role, then we need to assume it to deploy the stack

--- a/infra/github/samconfig.toml
+++ b/infra/github/samconfig.toml
@@ -7,7 +7,7 @@ s3_prefix = "ocean/metadata"
 region = "us-east-2"
 
 [default.deploy.parameters]
-confirm_changeset = true
+confirm_changeset = false
 capabilities = [
     "CAPABILITY_IAM",
     "CAPABILITY_NAMED_IAM",
