--- a/infra/github/samconfig.toml
+++ b/infra/github/samconfig.toml
@@ -1,9 +1,9 @@
 version = 0.1
 
 [default.global.parameters]
-stack_name = "ocean-metadata"
+stack_name = "ocean-metadata-github"
 s3_bucket = "mytiki-sam-deploy"
-s3_prefix = "ocean/metadata"
+s3_prefix = "ocean/metadata/github"
 region = "us-east-2"
 
 [default.deploy.parameters]
@@ -14,6 +14,4 @@ capabilities = [
     "CAPABILITY_AUTO_EXPAND"
 ]
 image_repositories = []
-parameter_overrides = [
-    "SAMBucket=mytiki-sam-deploy"
-]
+parameter_overrides = []
