test just role template

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,7 +52,11 @@ jobs:
           output-file: iamlive-policy.json
 
       - name: SAM Deploy GitHub
-        run: cd infra/github && sam build && sam package && sam deploy
+        run: |
+          cd infra/github
+          sam build -t role.yml
+          sam package -t role.yml
+          sam deploy -t role.yml --parameter-overrides  GitHubOrg=tiki-bar RepositoryName=tiki-ocean-metadata RoleName=GitHubDeployOceanMetadata
 
       - name: AWS Credentials
         uses: aws-actions/configure-aws-credentials@v3
