--- a/infra/github/samconfig.toml
+++ b/infra/github/samconfig.toml
@@ -1,7 +1,7 @@
 version = 0.1
 
 [default.global.parameters]
-stack_name = "ocean-metadata-github"
+stack_name = "ocean-metadata-github-policy"
 s3_bucket = "mytiki-sam-deploy"
 s3_prefix = "ocean/metadata/github"
 region = "us-east-2"
