--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,6 @@ on:
 env:
   SESSION_NAME : "gh_action"
   AWS_REGION : "us-east-2"
-  AWS_CSM_ENABLED: 'true'
 
 concurrency:
   group: ${{ github.ref }}-${{ github.workflow }}
@@ -45,18 +44,8 @@ jobs:
           role-session-name: ${{ env.SESSION_NAME }}
           aws-region: ${{ env.AWS_REGION }}
 
-      - uses: marcofranssen/setup-iamlive@v0.2.2
-        with:
-          iamlive-version: v0.53.0
-          auto-capture: true
-          output-file: iamlive-policy.json
-
       - name: SAM Deploy GitHub
-        run: |
-          cd infra/github
-          sam build -t policy.yml
-          sam package -t policy.yml
-          sam deploy -t policy.yml --parameter-overrides  RoleName=GitHubDeployOceanMetadata
+        run: cd infra/github && sam build && sam package && sam deploy
 
       - name: AWS Credentials
         uses: aws-actions/configure-aws-credentials@v3
