fix: add createQueue

--- a/infra/github/policy.yml
+++ b/infra/github/policy.yml
@@ -42,3 +42,7 @@ Resources:
               - lambda:UpdateFunctionCode
               - lambda:ListTags
             Resource: "*"
+          - Effect: Allow
+            Action:
+              - sqs:CreateQueue
+            Resource: "*"
