fix: add queue attributes

--- a/infra/github/policy.yml
+++ b/infra/github/policy.yml
@@ -45,4 +45,5 @@ Resources:
           - Effect: Allow
             Action:
               - sqs:CreateQueue
+              - sqs:GetQueueAttributes
             Resource: "*"
