--- a/infra/aws/samconfig.toml
+++ b/infra/aws/samconfig.toml
@@ -1,7 +1,7 @@
 version = 0.1
 
 [default.global.parameters]
-stack_name = "ocean-metadata-aws-queue"
+stack_name = "ocean-metadata-aws"
 s3_bucket = "mytiki-sam-deploy"
 s3_prefix = "ocean/metadata/aws"
 region = "us-east-2"
