fix: add CreateEventSourceMapping

--- a/infra/github/policy.yml
+++ b/infra/github/policy.yml
@@ -39,6 +39,7 @@ Resources:
               - lambda:GetFunction
               - lambda:UpdateFunctionCode
               - lambda:ListTags
+              - lambda:CreateEventSourceMapping
             Resource: "*"
           - Effect: Allow
             Action:
