--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,11 +55,7 @@ jobs:
           aws-region: ${{ env.AWS_REGION }}
 
       - name: SAM Deploy AWS
-        run: |
-          cd infra/aws
-          sam build -t function.yml
-          sam package -t function.yml
-          sam deploy -t function.yml --parameter-overrides QueueArn=arn:aws:sqs:us-east-2:254962200554:ocean-catalog.fifo
+        run: cd infra/aws sam build && sam package && sam deploy
 
       - name: Get Version
         id: version
