--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,7 +55,7 @@ jobs:
           aws-region: ${{ env.AWS_REGION }}
 
       - name: SAM Deploy AWS
-        run: cd infra/aws sam build && sam package && sam deploy
+        run: cd infra/aws && sam build && sam package && sam deploy
 
       - name: Get Version
         id: version
