--- a/.github/workflows/project.yml
+++ b/.github/workflows/project.yml
@@ -9,10 +9,25 @@ on:
       - opened
 
 jobs:
+  runs-on: ubuntu-latest
+  outputs:
+    my-key-exists: ${{ steps.pat-check.outputs.defined }}
+  check-secret:
+    name: Check PAT
+    id: pat-check
+    shell: bash
+    run: |
+      if [ "${{ secrets.GH_PROJECT_PAT }}" != '' ]; then
+        echo "defined=true" >> $GITHUB_OUTPUT;
+      else
+        echo "defined=false" >> $GITHUB_OUTPUT;
+      fi
+
   add-issue:
-    if: ${{ github.event_name == 'issues' && github.event.action == 'opened' && secrets.GH_PROJECT_PAT != null}}
+    if: ${{ github.event_name == 'issues' && github.event.action == 'opened' && needs.check-secret.outputs.pat-check == 'true'}}
     name: Add issue to project
     runs-on: ubuntu-latest
+    needs: [check-secret]
     steps:
       - name: Add to project
         uses: actions/add-to-project@v0.5.0
@@ -21,9 +36,10 @@ jobs:
           github-token: ${{ secrets.GH_PROJECT_PAT }}
 
   add-pr:
-    if: ${{ github.event_name == 'pull_request' && github.event.action == 'opened' && secrets.GH_PROJECT_PAT != null}}
+    if: ${{ github.event_name == 'pull_request' && github.event.action == 'opened' && needs.check-secret.outputs.pat-check == 'true'}}
     name: Add pull request to project
     runs-on: ubuntu-latest
+    needs: [check-secret]
     steps:
       - name: Add to project
         uses: actions/add-to-project@v0.5.0
