--- a/.github/workflows/project.yml
+++ b/.github/workflows/project.yml
@@ -9,22 +9,23 @@ on:
       - opened
 
 jobs:
-  runs-on: ubuntu-latest
-  outputs:
-    my-key-exists: ${{ steps.pat-check.outputs.defined }}
   check-secret:
-    name: Check PAT
-    id: pat-check
-    shell: bash
-    run: |
-      if [ "${{ secrets.GH_PROJECT_PAT }}" != '' ]; then
-        echo "defined=true" >> $GITHUB_OUTPUT;
-      else
-        echo "defined=false" >> $GITHUB_OUTPUT;
-      fi
+    runs-on: ubuntu-latest
+    outputs:
+      pat: ${{ steps.pat-check.outputs.defined }}
+    steps:
+      - name: Check PAT
+        id: pat-check
+        shell: bash
+        run: |
+          if [ "${{ secrets.GH_PROJECT_PAT }}" != '' ]; then
+            echo "defined=true" >> $GITHUB_OUTPUT;
+          else
+            echo "defined=false" >> $GITHUB_OUTPUT;
+          fi
 
   add-issue:
-    if: ${{ github.event_name == 'issues' && github.event.action == 'opened' && needs.check-secret.outputs.pat-check == 'true'}}
+    if: ${{ github.event_name == 'issues' && github.event.action == 'opened' && needs.check-secret.outputs.pat == 'true'}}
     name: Add issue to project
     runs-on: ubuntu-latest
     needs: [check-secret]
@@ -36,7 +37,7 @@ jobs:
           github-token: ${{ secrets.GH_PROJECT_PAT }}
 
   add-pr:
-    if: ${{ github.event_name == 'pull_request' && github.event.action == 'opened' && needs.check-secret.outputs.pat-check == 'true'}}
+    if: ${{ github.event_name == 'pull_request' && github.event.action == 'opened' && needs.check-secret.outputs.pat == 'true'}}
     name: Add pull request to project
     runs-on: ubuntu-latest
     needs: [check-secret]
