--- a/infra/aws/template.yml
+++ b/infra/aws/template.yml
@@ -7,7 +7,8 @@ Resources:
     Type: AWS::Serverless::Application
     Properties:
       Location: queue.yml
-      QueueName: cleanroom-sample-catalog
+      Parameters:
+        QueueName: cleanroom-sample-catalog
 
   Function:
     Type: AWS::Serverless::Application
