--- a/infra/aws/template.yml
+++ b/infra/aws/template.yml
@@ -9,6 +9,8 @@ Resources:
       Location: queue.yml
       Parameters:
         QueueName: cleanroom-sample-catalog
+        BucketName: mytiki-cleanroom-sample
+        DatabaseName: cleanroom_sample
 
   Function:
     Type: AWS::Serverless::Application
