fix: missing permission

--- a/infra/aws/function.yml
+++ b/infra/aws/function.yml
@@ -42,6 +42,7 @@ Resources:
               Action:
                 - glue:GetTable
                 - glue:GetTables
+                - glue:UpdateTable
               Resource:
                 - !Sub "arn:aws:glue:${AWS::Region}:${AWS::AccountId}:catalog"
                 - !Sub "arn:aws:glue:${AWS::Region}:${AWS::AccountId}:database/${DatabaseName}"
