fix: call on more actions.

--- a/.github/workflows/project.yml
+++ b/.github/workflows/project.yml
@@ -4,6 +4,11 @@ on:
   pull_request:
     types:
       - opened
+      - reopened
+      - converted_to_draft
+      - ready_for_review
+      - review_requested
+      - review_request_removed
 
 jobs:
   add-pr:
