--- a/infra/aws/samconfig.toml
+++ b/infra/aws/samconfig.toml
@@ -1,9 +1,9 @@
 version = 0.1
 
 [default.global.parameters]
-stack_name = "ocean-metadata-aws"
+stack_name = "core-iceberg-metadata-aws"
 s3_bucket = "mytiki-sam-deploy"
-s3_prefix = "ocean/metadata/aws"
+s3_prefix = "core/iceberg/metadata/aws"
 region = "us-east-2"
 
 [default.deploy.parameters]
