fix: bugs in template

--- a/infra/aws/template.yml
+++ b/infra/aws/template.yml
@@ -29,7 +29,7 @@ Metadata:
     LicenseUrl: ../../LICENSE
     ReadmeUrl: ../../README.md
     Labels: ['iceberg']
-    HomePageUrl: https://mytiki.com
+    HomePageUrl: https://github.com/tiki/core-iceberg-metadata
     SemanticVersion: 0.1.2
     SourceCodeUrl: https://github.com/tiki/core-iceberg-metadata
 
@@ -60,7 +60,7 @@ Resources:
             FunctionResponseTypes:
               - ReportBatchItemFailures
             BatchSize: 10
-            Queue: !Ref QueueArn
+            Queue: !GetAtt Queue.Arn
       Policies:
         - S3CrudPolicy:
             BucketName: !Ref BucketName
@@ -75,7 +75,8 @@ Resources:
                 - !Sub "arn:aws:glue:${AWS::Region}:${AWS::AccountId}:catalog"
                 - !Sub "arn:aws:glue:${AWS::Region}:${AWS::AccountId}:database/${DatabaseName}"
                 - !Sub "arn:aws:glue:${AWS::Region}:${AWS::AccountId}:table/${DatabaseName}/*"
-
+      Layers:
+        - !Sub "arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:layer:${UtilsName}:${UtilsVersion}"
 Outputs:
   Function:
     Description: Lambda Arn
