fix: update actions

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,7 @@ on:
 env:
   SESSION_NAME : "gh_action"
   AWS_REGION : "us-east-2"
+  UTILS_VERSION: 0.2.1
 
 concurrency:
   group: ${{ github.ref }}-${{ github.workflow }}
@@ -34,6 +35,17 @@ jobs:
           java-version: '20'
           distribution: 'zulu'
 
+      - name: Check out utils
+        uses: actions/checkout@v4
+        with:
+          repository: tiki/core-iceberg-utils
+          token: ${{ github.token }}
+          path: utils
+          ref: ${{ env.UTILS_VERSION }}
+
+      - name: Maven Install Utils
+        run: cd utils && mvn clean package install
+
       - name: Install xmlstarlet
         run: sudo apt-get update && sudo apt-get install -y xmlstarlet
 
@@ -54,8 +66,8 @@ jobs:
           role-session-name: ${{ env.SESSION_NAME }}
           aws-region: ${{ env.AWS_REGION }}
 
-      - name: SAM Deploy AWS
-        run: cd infra/aws && sam build && sam package --force-upload && sam deploy --force-upload
+      - name: SAM Publish
+        run: cd infra/aws && sam build && sam package --output-template-file packaged.yaml && sam publish --template packaged.yaml
 
       - name: Get Version
         id: version
