--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -5,7 +5,6 @@ on:
     branches:
       - main
 
-# Cancel any active builds when new commits are pushed
 concurrency:
   group: ${{ github.ref }}-${{ github.workflow }}
   cancel-in-progress: true
@@ -39,8 +38,12 @@ jobs:
           token: ${{ github.token }}
           branch: ${{ steps.getpr.outputs.branch }}
 
-      - name: Update Version
+      - name: Update POM Version
         run: xmlstarlet ed -L -u "_:project/_:version" -v "${{ steps.semver.outputs.nextStrict }}" pom.xml
+
+      - name: Update SAR Version
+        run: |
+          sed -i 's/SemanticVersion: .*/SemanticVersion: ${{ steps.semver.outputs.nextStrict }}/' infra/aws/template.yaml
 
       - name: Commit Changes
         continue-on-error: true
