--- a/infra/github/policy.yml
+++ b/infra/github/policy.yml
@@ -16,35 +16,8 @@ Resources:
       PolicyDocument:
         Version: '2012-10-17'
         Statement:
-          - Effect: Allow
-            Action:
-              - iam:CreateRole
-              - iam:TagRole
-              - iam:GetRolePolicy
-              - iam:PutRolePolicy
-              - iam:AttachRolePolicy
-              - iam:GetRole
-            Resource: "*"
-          - Effect: Allow
-            Action:
-              - iam:PassRole
-            Resource: "*"
-            Condition:
-              StringEquals:
-                iam:PassedToService: lambda.amazonaws.com
-          - Effect: Allow
-            Action:
-              - lambda:CreateFunction
-              - lambda:TagResource
-              - lambda:GetFunction
-              - lambda:UpdateFunctionCode
-              - lambda:ListTags
-              - lambda:CreateEventSourceMapping
-              - lambda:GetEventSourceMapping
-            Resource: "*"
-          - Effect: Allow
-            Action:
-              - sqs:CreateQueue
-              - sqs:GetQueueAttributes
-              - sqs:SetQueueAttributes
-            Resource: "*"
+          Statement:
+            - Effect: Allow
+              Action:
+                - serverlessrepo:*
+              Resource: "*"
