--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -8,9 +8,6 @@ on:
     branches:
       - main
 
-env:
-  UTILS_VERSION: 0.2.1
-
 concurrency:
   group: ${{ github.ref }}-${{ github.workflow }}
   cancel-in-progress: true
@@ -42,7 +39,7 @@ jobs:
           repository: tiki/core-iceberg-utils
           token: ${{ github.token }}
           path: utils
-          ref: ${{ env.UTILS_VERSION }}
+          ref: ${{ vars.UTILS_VERSION }}
 
       - name: Maven Install Utils
         run: cd utils && mvn clean package install
