--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,10 +6,6 @@ on:
     branches:
       - main
 
-env:
-  UTILS_VERSION: 0.2.1
-
-# Cancel any active builds when new commits are pushed
 concurrency:
   group: ${{ github.ref }}-${{ github.workflow }}
   cancel-in-progress: true
@@ -37,7 +33,7 @@ jobs:
           repository: tiki/core-iceberg-utils
           token: ${{ github.token }}
           path: utils
-          ref: ${{ env.UTILS_VERSION }}
+          ref: ${{ vars.UTILS_VERSION }}
 
       - name: Maven Install Utils
         run: cd utils && mvn clean package install
@@ -53,13 +49,7 @@ jobs:
           path: target/surefire-reports/**/*.xml
 
       - name: Validate AWS Template
-        run: cd infra/aws && sam validate
+        run: cd infra/sar && sam validate
 
       - name: Build AWS Template
-        run: cd infra/aws && sam build
-
-      - name: Validate GitHub Template
-        run: cd infra/github && sam validate
-
-      - name: Build GitHub Template
-        run: cd infra/github && sam build
+        run: cd infra/sar && sam build
