fix: update actions

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Check out utils
         uses: actions/checkout@v4
         with:
-          repository: tiki/core-iceberg-utils
+          repository: tiki/core-ocean-iceberg-utils
           token: ${{ github.token }}
           path: utils
           ref: ${{ vars.UTILS_VERSION }}
@@ -71,7 +71,7 @@ jobs:
 
       - name: SAM Deploy Function
         run: |
-          cd infra/sar
+          cd infra/function
           sam build
           sam package
           sam deploy
