fix: perm issues

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Validate AWS Template
         run: |
           cd infra/function
-          sam validate --lint
+          sam validate
 
       - name: Build AWS Template
         run: |
